--- a/sass/main.scss
+++ b/sass/main.scss
@@ -150,6 +150,9 @@ ul {
       height: 100vh;
     }
 
+ #skills-list{
+   font-size: 2em;
+ }
 
 }
 
